<resources>
    <string name="app_name">MVPDemo</string>
    <string name="user_name">Account</string>
    <string name="user_password">Password</string>
    <string name="login">Login</string>
    <string name="my_resume">My\nResume</string>

    <string name="new_user">Account</string>
    <string name="find_password">Forget Password</string>
    <string name="network_interruption">Network Interruption</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm</string>
    <string name="email">Email</string>
    <string name="phone">Tel</string>
    <string name="qq">QQ</string>
    <string name="we_chat">WeChat</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="modify_password">Modify</string>
    <string name="new_password">Password</string>

    <string name="position">Position</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="check_code">Code</string>
    <string name="send_check_code">Send</string>
    <string name="next">Next</string>
    <string name="must">*</string>

</resources>
