<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="@dimen/activity_horizontal_margin"
              tools:context="com.example.mvpdemo.view.fragment.LoginFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/title_shape"
        android:gravity="center"
        android:paddingBottom="7dp"
        android:paddingEnd="@dimen/common_margin_10"
        android:paddingStart="@dimen/common_margin_10"
        android:paddingTop="7dp"
        android:text="@string/my_resume"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:errorEnabled="true"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text"
            tools:text="zhu"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_password"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimary">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/user_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionGo"
            android:inputType="textPassword"
            tools:text="123"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/btn_selector"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/common_text_size_16"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_10"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/new_user"
            style="@style/TextStyle14ColorPrimary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_user"/>

        <TextView
            android:id="@+id/find_password"
            style="@style/TextStyle14ColorPrimary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/find_password"/>
    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        style="@style/TextStyle12ColorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center_horizontal"
        android:text="版权所有zhuyingxin(2017)"/>
</LinearLayout>
