<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background"
              android:orientation="vertical"
              tools:context="com.example.mvpdemo.view.fragment.ModifyPasswordFrg">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?android:actionBarSize">

        <TextView
            style="@style/TextTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modify_password"/>
    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/common_margin_15"
        android:paddingRight="@dimen/common_margin_15">

        <TextView
            style="@style/TextStyle14ColorPrimary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:padding="@dimen/common_margin_10"
            android:text="@string/user_name"/>

        <TextView
            android:id="@+id/user_name"
            style="@style/TextStyle14colorAccent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="@dimen/common_margin_10"
            tools:text="zhu"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_10"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/common_margin_15"
        android:paddingRight="@dimen/common_margin_15">

        <TextView
            style="@style/TextStyle14ColorPrimary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:padding="@dimen/common_margin_10"
            android:text="@string/new_password"/>

        <EditText
            android:id="@+id/user_password"
            style="@style/TextStyle14colorAccent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@null"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:hint="请输入密码"
            android:padding="@dimen/common_margin_10"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_10"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/common_margin_15"
        android:paddingRight="@dimen/common_margin_15">

        <TextView
            style="@style/TextStyle14ColorPrimary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:padding="@dimen/common_margin_10"
            android:text="@string/confirm_password"/>

        <EditText
            android:id="@+id/user_password_confirm"
            style="@style/TextStyle14colorAccent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@null"
            android:hint="再次确认密码"
            android:inputType="textPassword"
            android:padding="@dimen/common_margin_10"/>

    </LinearLayout>

    <TextView
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_margin_15"
        android:layout_marginRight="@dimen/common_margin_15"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_selector"
        android:gravity="center"
        android:padding="@dimen/common_margin_10"
        android:text="@string/submit"
        android:textColor="@android:color/white"/>
</LinearLayout>
