<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background"
              android:orientation="vertical"
              tools:context="com.example.mvpdemo.view.fragment.RegisterUserFrag">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <TextView
            style="@style/TextTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/register"/>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_10"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/common_margin_15"
        android:paddingRight="@dimen/common_margin_15">

        <TextView
            style="@style/TextStyle14ColorPrimary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="@dimen/common_margin_15"
            android:paddingTop="@dimen/common_margin_15"
            android:text="@string/new_user"/>

        <EditText
            android:id="@+id/user_name"
            style="@style/TextStyle14colorAccent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="@null"
            android:hint="请输入用户名 (必填)"
            android:imeOptions="actionNext"
            android:maxLength="20"
            android:paddingBottom="@dimen/common_margin_15"
            android:paddingTop="@dimen/common_margin_15"
            android:singleLine="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/must"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/common_margin_15"
        android:paddingRight="@dimen/common_margin_15">

        <TextView
            style="@style/TextStyle14ColorPrimary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="@dimen/common_margin_15"
            android:paddingTop="@dimen/common_margin_15"
            android:text="@string/user_password"/>

        <EditText
            android:id="@+id/user_password"
            style="@style/TextStyle14colorAccent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="@null"
            android:hint="请输入密码 (必填)"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLength="16"
            android:paddingBottom="@dimen/common_margin_15"
            android:paddingTop="@dimen/common_margin_15"
            android:singleLine="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/must"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/common_margin_15"
        android:paddingRight="@dimen/common_margin_15">

        <TextView
            android:id="@+id/textView4"
            style="@style/TextStyle14ColorPrimary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="@dimen/common_margin_15"
            android:paddingTop="@dimen/common_margin_15"
            android:text="@string/confirm_password"/>

        <EditText
            android:id="@+id/user_password_confirm"
            style="@style/TextStyle14colorAccent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="@null"
            android:hint="再次确认密码 (必填)"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLength="16"
            android:paddingBottom="@dimen/common_margin_15"
            android:paddingTop="@dimen/common_margin_15"
            android:singleLine="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/must"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/common_margin_15"
        android:paddingRight="@dimen/common_margin_15">

        <TextView
            style="@style/TextStyle14ColorPrimary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="@dimen/common_margin_15"
            android:paddingTop="@dimen/common_margin_15"
            android:text="@string/email"/>

        <EditText
            android:id="@+id/user_email"
            style="@style/TextStyle14colorAccent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="@null"
            android:hint="请输入您的Email (必填)"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingBottom="@dimen/common_margin_15"
            android:paddingTop="@dimen/common_margin_15"
            android:singleLine="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/must"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/common_margin_15"
        android:paddingRight="@dimen/common_margin_15">

        <TextView
            style="@style/TextStyle14ColorPrimary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="@dimen/common_margin_15"
            android:paddingTop="@dimen/common_margin_15"
            android:text="@string/phone"/>

        <EditText
            android:id="@+id/user_phone"
            style="@style/TextStyle14colorAccent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="@null"
            android:hint="请输入您的Phone (必填)"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:paddingBottom="@dimen/common_margin_15"
            android:paddingTop="@dimen/common_margin_15"
            android:singleLine="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/must"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/common_margin_15"
        android:paddingRight="@dimen/common_margin_15">

        <TextView
            style="@style/TextStyle14ColorPrimary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="@dimen/common_margin_15"
            android:paddingTop="@dimen/common_margin_15"
            android:text="@string/qq"/>

        <EditText
            android:id="@+id/user_qq"
            style="@style/TextStyle14colorAccent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="@null"
            android:hint="请输入您的QQ (选填)"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:paddingBottom="@dimen/common_margin_15"
            android:paddingTop="@dimen/common_margin_15"
            android:singleLine="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/common_margin_15"
        android:paddingRight="@dimen/common_margin_15">

        <TextView
            style="@style/TextStyle14ColorPrimary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="@dimen/common_margin_15"
            android:paddingTop="@dimen/common_margin_15"
            android:text="@string/we_chat"/>

        <EditText
            android:id="@+id/user_we_chat"
            style="@style/TextStyle14colorAccent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="@null"
            android:hint="请输入您的WeChat (选填)"
            android:imeOptions="actionGo"
            android:paddingBottom="@dimen/common_margin_15"
            android:paddingTop="@dimen/common_margin_15"
            android:singleLine="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/common_margin_15"
        android:paddingRight="@dimen/common_margin_15">

        <TextView
            android:id="@+id/submit"
            style="@style/TextTitleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_selector"
            android:gravity="center"
            android:padding="@dimen/common_margin_10"
            android:text="@string/submit"/>

        <TextView
            android:id="@+id/reset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_margin_15"
            android:layout_weight="1"
            android:background="@drawable/btn_shape"
            android:gravity="center"
            android:padding="@dimen/common_margin_10"
            android:text="@string/reset"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/common_text_size_16"/>
    </LinearLayout>


</LinearLayout>
